; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_parser.c_parse_connected.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_parser.c_parse_connected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__*, i32, i32 }

@.str = private unnamed_addr constant [7 x i8] c"output\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"activation\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"logistic\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"batch_normalize\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_connected(i32* %0, %struct.TYPE_4__* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_5__, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = bitcast %struct.TYPE_5__* %4 to { %struct.TYPE_4__*, i64 }*
  %12 = getelementptr inbounds { %struct.TYPE_4__*, i64 }, { %struct.TYPE_4__*, i64 }* %11, i32 0, i32 0
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %12, align 8
  %13 = getelementptr inbounds { %struct.TYPE_4__*, i64 }, { %struct.TYPE_4__*, i64 }* %11, i32 0, i32 1
  store i64 %2, i64* %13, align 8
  store i32* %0, i32** %5, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @option_find_int(i32* %14, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 1)
  store i32 %15, i32* %6, align 4
  %16 = load i32*, i32** %5, align 8
  %17 = call i8* @option_find_str(i32* %16, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  store i8* %17, i8** %7, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @get_activation(i8* %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @option_find_int_quiet(i32* %20, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i32 0)
  store i32 %21, i32* %9, align 4
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @make_connected_layer(i32 %23, i32 %25, i32 %26, i32 %27, i32 %28, i32 %32)
  store i32 %33, i32* %10, align 4
  %34 = load i32, i32* %10, align 4
  ret i32 %34
}

declare dso_local i32 @option_find_int(i32*, i8*, i32) #1

declare dso_local i8* @option_find_str(i32*, i8*, i8*) #1

declare dso_local i32 @get_activation(i8*) #1

declare dso_local i32 @option_find_int_quiet(i32*, i8*, i32) #1

declare dso_local i32 @make_connected_layer(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
